--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-    <script src="js/snack5.js"></script>
+    <div>
+        <h1>IL RISULTATO E' :</h1>
+        <div id="result"></div>
+    </div>
+    <script src="js/snack1.js"></script>
 </body>
 
 </html>
