--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 <body>
     <div>
         <h1>IL RISULTATO E' :</h1>
+        <input type="number" name="answer" id="inputText" min="0" value="0">
+        <button id="add">Aggiungi</button>
+        <button id="enter">Invio</button>
         <div id="result"></div>
     </div>
-    <script src="js/snack5.js"></script>
+    <script src="js/snack1.js"></script>
 </body>
 
 </html>
